# cycle-simulator

./: Cargo.toml  a.json  b.json  c.json  default_config.json
src/: actions.rs  aggregate.rs  field.rs  lib.rs  main.rs  robot.rs  test.rs
src/robot/: robot_config.rs
