[package]
name = "cycle-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.5"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.111"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "aggregate"
path = "src/aggregate.rs"
